# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "TestRustkan"
version = "0.1.0"
authors = ["FELIX BOULE--REIFF <fboule@deleo.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
vulkano = "0.19"
vulkano-shaders = "0.18.0"
iui = "0.3"