# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "TestRustkan"
version = "0.1.0"
authors = ["FELIX BOULE--REIFF <fboule@deleo.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
vulkano = "0.19"
vulkano-shaders = "0.18.0"
iui = "0.3"
piston = "0.52.0"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"